Bug 73806 - Expert Configuration button opens huge and not resizable table
Summary: Expert Configuration button opens huge and not resizable table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.2 rc
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords:
: 79489 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-01-19 18:49 UTC by tommy27
Modified: 2014-07-11 08:38 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2014-01-19 18:49:34 UTC
tested under Win7 64bit

Version: 4.2.1.0.0+
Build ID: 88cd9632e081f5839cf9fddf60cbff0c099e2968
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-01-09_22:46:56

Select Tools menu -> Options -> LibreOffice -> Advanced
click the "Advanced Configuration"

current behaviour: a huge options table with options shows up and has no resizable margins. the width is too large to be managed.

expected behaviour: the table should be resizable to fit the screen.
Comment 1 Carlo Strata 2014-01-19 20:39:37 UTC
Remember to set 4.2.1.x version when available on the version select on the bug's details.

Carlo
Comment 2 Jacques Guilleron 2014-01-19 22:26:29 UTC
Hello tommy27,

I confirm with LO 4.2.0.2 and LO  4.2.1.0.0+
Build ID: d77f6160afc213cd1cb8c658ece4e074f4e60bce
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-01-17_02:12:39
& Windows 7 Home Premium

Kind regards,

Jacques
Comment 3 tommy27 2014-01-19 22:38:29 UTC
this bug reminds me Bug 65609  which was fixed by Coalan McNamara.
maybe this has a similar cause.
Comment 4 tommy27 2014-04-18 05:03:04 UTC
still broken in 4.2.3.3 and  4.3.0.0.alpha0+ (*)

the table is still huge and unmanageable...
you cannot shrink it... you can only enlarge it which is useless since it'a already too large

(*) Build ID: 4211ce7c62677c65dfbbb3602be6c36fd0f98977
TinderBox: Win-x86@42, Branch:master, Time: 2014-04-17_07:49:30
Comment 5 V Stuart Foote 2014-07-03 12:26:24 UTC
*** Bug 79489 has been marked as a duplicate of this bug. ***
Comment 6 V Stuart Foote 2014-07-03 12:33:53 UTC
adding to MAB for 4.3 -- bug 75025

this aspect, lack of search capability, plus performance issues when AT is active (bug 70465), really require additional work on the Expert Configuration features early in the 4.3 release cycle.
Comment 7 tommy27 2014-07-05 09:14:18 UTC
issue still reproducible in 4.2.4.2 and 4.4.0.0.alpha0+
Build ID: 95272e7e5b7e38753ab07dbd6503b7cfa2974842
TinderBox: Win-x86@42, Branch:master, Time: 2014-06-26_23:01:43

@Stuart 
why did you label this as MABlobo inferiore sn. ?
since the issue is in 4.2.x a s well I think it should be moved to MAB4.2 list.
Comment 8 V Stuart Foote 2014-07-05 13:41:32 UTC
(In reply to comment #7)
> @Stuart 
> why did you label this as MABlobo inferiore sn. ?
> since the issue is in 4.2.x a s well I think it should be moved to MAB4.2
> list.

The correction to confine the window frame to available screenscape and maybe provide vertical scroll bar should be pretty simple. Efe Yalaman had withdrawn from working on it due to his other GSOC project, so in closing bug 79489 as dupe of this while looking at annoyances for for the 4.3 release (and as a number of folks have been pointing UX "solutions" to inclusion in Expert Configuration) simply had to pick one, so went with the 4.3 mab.
Comment 9 Caolán McNamara 2014-07-09 12:52:47 UTC
I'll take this on the very narrow focus that the dialog is too large and therefore is not resizable.
Comment 10 Commit Notification 2014-07-09 12:57:27 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=877aa0e1e879b057027029c1ceed07f90b00b0d3

Resolves: fdo#73806 reduce the size-request of the expert config dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2014-07-10 10:21:58 UTC
Review on gerrit for 4-3 now as well.

I think in general the dialog needs to go away from a firefox style list of all options and towards a hierarchical file system view of them because we have way too many of them with way too long names to be effective in a single flat view
Comment 12 Jacques Guilleron 2014-07-10 12:11:53 UTC
Fine Caolán,
Works with LO 4.4.0.0.alpha0+
Build ID: b023565d4f064cd0312e8c1fcc23a9f552112935
TinderBox: Win-x86@39, Branch:master, Time: 2014-07-10_01:55:29
under Windows 7 Home Premium

regards,

Jacques
Comment 13 V Stuart Foote 2014-07-10 18:02:45 UTC
(In reply to comment #11)
> Review on gerrit for 4-3 now as well.
> 
Also confirming on Windows 7 sp1, 64-bit with
Version: 4.4.0.0.alpha0+
Build ID: b023565d4f064cd0312e8c1fcc23a9f552112935
TinderBox: Win-x86@39, Branch:master, Time: 2014-07-10_01:55:29

Opens in a reasonable size frame with active scroll bars. Can now be resized.

So, if this can be approved for the 4.3.0 RC3 and final that would be good.

> 
> I think in general the dialog needs to go away from a firefox style list of
> all options and towards a hierarchical file system view of them because we
> have way too many of them with way too long names to be effective in a
> single flat view

No opinion on that, but if rework of building it as a table can be avoided that may solve the very slow and memory intensive behavior with AT support is enabled, bug 70465.
Comment 14 Commit Notification 2014-07-11 08:38:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=458e7220b08886b4072b1093e9ebdbfef3fe9ee7&h=libreoffice-4-3

Resolves: fdo#73806 reduce the size-request of the expert config dialog


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.